# polyglot-ffi

./: .gitignore  404.html  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROTOTYPE.md  README.md  ROADMAP.md  SECURITY.md  STEPS.md  codecov.yml  encryption.mli  index.html  mkdocs.yml  polyglot-ffi-gen.py  polyglot.toml.example  pyproject.toml  setup.py  sitemap.xml  versions.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  docs.yml  release.yml
0.4.0/: 404.html  index.html  sitemap.xml
0.4.0/CHANGELOG/: index.html
0.4.0/CODE_OF_CONDUCT/: index.html
0.4.0/DOCUMENTATION/: index.html
0.4.0/LICENSE/: index.html
0.4.0/ROADMAP/: index.html
0.4.0/SECURITY/: index.html
0.4.0/api/: index.html
0.4.0/architecture/: index.html
0.4.0/configuration/: index.html
0.4.0/contributing/: index.html
0.4.0/faq/: index.html
0.4.0/installation/: index.html
0.4.0/man/: index.html  polyglot-ffi-check.1  polyglot-ffi-config.5  polyglot-ffi-init.1
0.4.0/quick_reference/: index.html
0.4.0/quickstart/: index.html
0.4.0/type-mapping/: index.html
0.4.1/: 404.html  index.html  sitemap.xml
0.4.1/CHANGELOG/: index.html
0.4.1/CODE_OF_CONDUCT/: index.html
0.4.1/DOCUMENTATION/: index.html
0.4.1/LICENSE/: index.html
0.4.1/ROADMAP/: index.html
0.4.1/SECURITY/: index.html
0.4.1/api/: index.html
0.4.1/architecture/: index.html
0.4.1/configuration/: index.html
0.4.1/contributing/: index.html
0.4.1/faq/: index.html
0.4.1/installation/: index.html
0.4.1/man/: index.html  polyglot-ffi-clean.1  polyglot-ffi-generate.1  polyglot-ffi-watch.1  polyglot-ffi.1
0.4.1/quick_reference/: index.html
0.4.1/quickstart/: index.html
0.4.1/search/: search_index.json
0.4.1/type-mapping/: index.html
0.4.2/: 404.html  index.html  sitemap.xml
0.4.2/CHANGELOG/: index.html
0.4.2/CODE_OF_CONDUCT/: index.html
0.4.2/DOCUMENTATION/: index.html
0.4.2/LICENSE/: index.html
0.4.2/ROADMAP/: index.html
0.4.2/SECURITY/: index.html
0.4.2/api/: index.html
0.4.2/architecture/: index.html
0.4.2/configuration/: index.html
0.4.2/contributing/: index.html
0.4.2/faq/: index.html
0.4.2/installation/: index.html
0.4.2/man/: index.html  polyglot-ffi-clean.1  polyglot-ffi-init.1
0.4.2/quick_reference/: index.html
0.4.2/quickstart/: index.html
0.4.2/search/: search_index.json
0.4.2/type-mapping/: index.html
0.4.3/: 404.html  index.html  sitemap.xml
0.4.3/CHANGELOG/: index.html
0.4.3/CODE_OF_CONDUCT/: index.html
0.4.3/DOCUMENTATION/: index.html
0.4.3/LICENSE/: index.html
0.4.3/ROADMAP/: index.html
0.4.3/SECURITY/: index.html
0.4.3/api/: index.html
0.4.3/architecture/: index.html
0.4.3/configuration/: index.html
0.4.3/contributing/: index.html
0.4.3/faq/: index.html
0.4.3/installation/: index.html
0.4.3/man/: index.html  polyglot-ffi-generate.1  polyglot-ffi-init.1  polyglot-ffi-watch.1  polyglot-ffi.1
0.4.3/quick_reference/: index.html
0.4.3/quickstart/: index.html
0.4.3/type-mapping/: index.html
0.5.0/: 404.html  index.html  sitemap.xml
0.5.0/CHANGELOG/: index.html
0.5.0/CODE_OF_CONDUCT/: index.html
0.5.0/DOCUMENTATION/: index.html
0.5.0/LICENSE/: index.html
0.5.0/ROADMAP/: index.html
0.5.0/SECURITY/: index.html
0.5.0/api/: index.html
0.5.0/architecture/: index.html
0.5.0/configuration/: index.html
0.5.0/contributing/: index.html
0.5.0/faq/: index.html
0.5.0/installation/: index.html
0.5.0/man/: index.html  polyglot-ffi-watch.1  polyglot-ffi.1
0.5.0/quick_reference/: index.html
0.5.0/quickstart/: index.html
0.5.0/type-mapping/: index.html
0.5.1/: 404.html  index.html  sitemap.xml
0.5.1/CHANGELOG/: index.html
0.5.1/CODE_OF_CONDUCT/: index.html
0.5.1/DOCUMENTATION/: index.html
0.5.1/LICENSE/: index.html
0.5.1/ROADMAP/: index.html
0.5.1/SECURITY/: index.html
0.5.1/api/: index.html
0.5.1/architecture/: index.html
0.5.1/configuration/: index.html
0.5.1/contributing/: index.html
0.5.1/faq/: index.html
0.5.1/installation/: index.html
0.5.1/man/: index.html
0.5.1/quick_reference/: index.html
0.5.1/quickstart/: index.html
0.5.1/search/: search_index.json
0.5.1/type-mapping/: index.html
0.5.2/: 404.html  index.html  objects.inv  sitemap.xml
0.5.2/CHANGELOG/: index.html
0.5.2/CODE_OF_CONDUCT/: index.html
0.5.2/api/: index.html
CHANGELOG/: index.html
CODE_OF_CONDUCT/: index.html
DOCUMENTATION/: index.html
LICENSE/: index.html
ROADMAP/: index.html
SECURITY/: index.html
api/: index.html
architecture/: index.html
bindings/: dune  dune-project  encryption_py.py  encryption_stubs.c  encryption_stubs.h  function_description.ml  type_description.ml
configuration/: index.html
contributing/: index.html
docs/: DOCUMENTATION.md  architecture.md  configuration.md  contributing.md  faq.md  index.md  installation.md  quick_reference.md  quickstart.md  type-mapping.md
examples/: README.md
faq/: index.html
installation/: index.html
man/: index.html  polyglot-ffi-clean.1  polyglot-ffi-config.5  polyglot-ffi-generate.1  polyglot-ffi-init.1
quick_reference/: index.html
quickstart/: index.html
scripts/: benchmark.py  install-completions.sh
search/: search_index.json
tests/: conftest.py
type-mapping/: index.html
(+112 files in other folders)
