[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polyglot-ffi"
version = "0.3.0"
description = "Automatic FFI bindings generator for polyglot projects"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Chizaram Chibueze", email = "chizy@chizyhub.com"}
]
keywords = ["ffi", "bindings", "ocaml", "python", "rust", "ctypes", "polyglot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "pydantic>=2.0.0",
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
polyglot-ffi = "polyglot_ffi.cli.main:cli"

[project.urls]
Homepage = "https://github.com/chizy7/polyglot-ffi"
Documentation = "https://polyglot-ffi.readthedocs.io"
Repository = "https://github.com/chizy7/polyglot-ffi"
Issues = "https://github.com/chizy7/polyglot-ffi/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=polyglot_ffi",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true