[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polyglot-ffi"
version = "0.5.2"
description = "Automatic FFI bindings generator for polyglot projects"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Chizaram Chibueze", email = "chizy@chizyhub.com"}
]
keywords = ["ffi", "bindings", "ocaml", "python", "rust", "ctypes", "polyglot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "pydantic>=2.0.0",
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.10.0",
    "black>=24.0.0,<27.0.0",
    "ruff>=0.15.0",
    "mypy>=2.0.0",
]

[project.scripts]
polyglot-ffi = "polyglot_ffi.cli.main:cli"

[project.urls]
Homepage = "https://github.com/chizy7/polyglot-ffi"
Documentation = "https://polyglotffi.com/"
Repository = "https://github.com/chizy7/polyglot-ffi"
Issues = "https://github.com/chizy7/polyglot-ffi/issues"
Changelog = "https://github.com/chizy7/polyglot-ffi/blob/master/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=polyglot_ffi",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
omit = [
    "src/polyglot_ffi/__main__.py",
    "src/polyglot_ffi/cli/__init__.py",
    "src/polyglot_ffi/cli/main.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
# TypeError_ intentionally trails with underscore to avoid shadowing the builtin
"src/polyglot_ffi/utils/errors.py" = ["N801", "N818"]
# Generator templates emit C/dune/Makefile source; line breaks would corrupt output
"src/polyglot_ffi/generators/c_stubs_gen.py" = ["E501"]
"src/polyglot_ffi/generators/dune_gen.py" = ["E501"]
"src/polyglot_ffi/commands/init.py" = ["E501"]
# Test names mirror the capitalized input strings they're testing
"tests/unit/test_errors.py" = ["N802"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true